* Fixed sponsor alignment * Added embedded ticket form

--- a/css/site.css
+++ b/css/site.css
@@ -54,32 +54,46 @@ a {
 	font-size: 1.5rem;
 	padding: 0.75rem 1rem;
 	margin: 0 1rem 1rem 1rem;
+	height: 8rem;
+	overflow: hidden;
+}
+.sub-sponsor.square {
+	width: 8rem;
 }
 .sub-sponsor.taken {
 	border-width: 0px;
 	background-size: cover;
 	background-color: #ffffff;
 }
+.sub-sponsor.taken img {
+	max-height: 6.5rem;
+}
+.sub-sponsor.taken.square img {
+	max-width: 6rem;
+}
 
-/* These force the logo spaces to be squares */
-.sub-sponsor.square:before {
-	content: '';
-	float: left;
-	width: 0;
-	height: 0;
-	padding-bottom: 100%;
-}
-.sub-sponsor.square:after {
-	display: table;
-	clear: both;
-}
+
+
+/*!* These force the logo spaces to be squares *!*/
+/*.sub-sponsor.square:before {*/
+	/*content: '';*/
+	/*float: left;*/
+	/*width: 0;*/
+	/*height: 0;*/
+	/*padding-bottom: 100%;*/
+/*}*/
+/*.sub-sponsor.square:after {*/
+	/*display: table;*/
+	/*clear: both;*/
+/*}*/
 
 .sponsor-offer {
 	font-family: "refrigerator-deluxe";
 	font-weight: 300;
 	font-size: 1rem;
 	color: #0B4E67;
-	margin-top: 0rem;
+	margin-top: 0;
+	text-align: right;
 }
 
 
